...
            )
        },
        modifier = Modifier
            .fillMaxWidth()
            .padding(start = 10.dp, end = 10.dp, top = 10.dp)
            .focusRequester(focusRequester)
            .testTag("campoBusquedaTag"),
        singleLine = true,
        isError = isError,
        shape = MaterialTheme.shapes.large,
        trailingIcon = {
            IconButton(onClick = {
                if (searchQuery.isBlank()) {
...
                        snackbarHostState.showSnackbar(
                            context.getString(R.string.revisa_tu_conexion_a_internet),
                            duration = SnackbarDuration.Short,
                        )
                    }
                }
            }, modifier = Modifier.testTag("performSearchIcon")) {
                Icon(imageVector = Icons.Filled.Search, contentDescription = "Search")
            }
        },
        supportingText = {
            if (isError) {
                Text(
                    text = "Dato requerido",
                    color = Color.Red,
                    style = MaterialTheme.typography.bodySmall,
                    modifier = Modifier.testTag("supportingTextTag")
                )
            }
        },
    )
}

